# chameleon

./: .gitignore  Cargo.toml  README.md  default_node_runtime_types.rs  node-runtime.scale
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml  node-runtime.scale
core/src/: generate_runtime.rs  generate_types.rs  lib.rs  typegen.rs
examples/codegen/: Cargo.toml
examples/codegen/src/: main.rs  substrate_node_runtime.rs
examples/subscribe_events/: Cargo.toml
examples/subscribe_events/src/: main.rs
macro/: Cargo.toml
macro/src/: lib.rs
src/: lib.rs
