[package]
name = "chameleon"
version = "0.1.0"
authors = ["Andrew Jones <ascjones@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
frame-metadata = { path = "../paritytech/frame-metadata/frame-metadata", default-features = false }
scale-info = { path = "../paritytech/scale-info", package = "scale-info", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-metadata/std",
    "scale-info/std",
]

