[package]
name = "chameleon-core"
version = "0.1.0"
authors = ["Andrew Jones <ascjones@gmail.com>"]
edition = "2018"

[dependencies]
frame-metadata = { package = "frame-metadata", git = "https://github.com/paritytech/frame-metadata", branch = "aj-chameleon", default-features = false, features = ["v13"] }
heck = "0.3.1"
proc-macro2 = "1.0"
quote = "1"
syn = { version = "1.0", features = ["parsing", "full"] }
scale = { package = "parity-scale-codec", version = "1.3", default-features = false}
scale-info = { git = "https://github.com/paritytech/scale-info", default-features = false, optional = true, features = ["derive"] }
thiserror = "1.0.22"

[features]
default = ["std"]
std = [
    "frame-metadata/std",
    "scale/std",
    "scale-info/std",
    "scale-info/serde",
]
