[package]
name = "chameleon-core"
version = "0.1.0"
authors = ["Andrew Jones <ascjones@gmail.com>"]
edition = "2018"

[dependencies]
frame-metadata = { package = "frame-metadata", git = "https://github.com/montekki/frame-metadata", branch = "fs-substrate", default-features = false, features = ["v14"] }
heck = "0.3.1"
proc-macro2 = "1.0"
quote = "1"
syn = { version = "1.0", features = ["parsing", "full"] }
scale = { package = "parity-scale-codec", version = "2.0", default-features = false}
scale-info = { git = "https://github.com/paritytech/scale-info", branch = "aj-substrate", default-features = false, features = ["derive", "decode"] }

thiserror = "1.0.22"

[features]
default = ["std"]
std = [
    "frame-metadata/std",
    "scale/std",
    "scale-info/std",
    "scale-info/serde",
]
