[package]
name = "chameleon-core"
version = "0.1.0"
authors = ["Andrew Jones <ascjones@gmail.com>"]
edition = "2018"

[dependencies]
bitvec = { version = "0.20.1", default-features = false, features = ["alloc"], optional = true }
frame-metadata = { package = "frame-metadata", git = "https://github.com/paritytech/frame-metadata", default-features = false, features = ["v14"] }
heck = "0.3.1"
proc-macro2 = "1.0"
quote = "1"
syn = { version = "1.0", features = ["parsing", "full"] }
scale = { package = "parity-scale-codec", version = "2.0", default-features = false}
scale-info = { version = "0.12.0", default-features = false, features = ["derive", "decode"] }

thiserror = "1.0.22"

[features]
default = ["std", "bit-vec"]
std = [
	"bitvec/std",
    "frame-metadata/std",
    "scale/std",
    "scale-info/std",
    "scale-info/serde",
]

# enables type information for bitvec types
bit-vec = [
	"bitvec",
	"scale-info/bit-vec"
]
